sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:12: error: '(' expected but identifier found.
    if getValeur(i-n)>memoire{
       ^AlgInsertionSort:15: error: illegal start of simple expression
  }
  ^